syntax = "proto3";
package g4alentertainment.g4alchain.game;

import "g4alchain/game/project.proto";
// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/G4AL-Entertainment/g4al-chain/x/game/types";

// Msg defines the Msg service.
service Msg {
  rpc CreateProject(MsgCreateProject) returns (MsgCreateProjectResponse);
  rpc UpdateProject(MsgUpdateProject) returns (MsgUpdateProjectResponse);
  rpc AddDelegate(MsgAddDelegate) returns (MsgAddDelegateResponse);
  rpc RemoveDelegate(MsgRemoveDelegate) returns (MsgRemoveDelegateResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreateProject {
  string creator = 1;
  string symbol = 2;

  string name = 3;
  string description = 4;
}
message MsgCreateProjectResponse {}

message MsgUpdateProject {
  string creator = 1;
  string symbol = 2;

  string name = 3;
  string description = 4;
}
message MsgUpdateProjectResponse {}

message MsgAddDelegate {
  string creator = 1;
  string symbol = 2;
  repeated string delegate = 3;
}

message MsgAddDelegateResponse {
}

message MsgRemoveDelegate {
  string creator = 1;
  string symbol = 2;
  repeated string delegate = 3;
}

message MsgRemoveDelegateResponse {
}

// this line is used by starport scaffolding # proto/tx/message
